# discovering-modern-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Chapter1/: CMakeLists.txt
Chapter1/Examples/: CMakeLists.txt
Chapter1/Exercises/: CMakeLists.txt
Chapter_1/: CMakeLists.txt
Chapter_1/Examples/Section_7/: CMakeLists.txt  file_io_demo.cpp  generic_stream_demo.cpp
Chapter_1/Exercises/: CMakeLists.txt
Chapter_1/toy_io/: CMakeLists.txt  toy_io.cpp  toy_io.h
Examples/: CMakeLists.txt
Examples/Chapter01/: CMakeLists.txt
Examples/Chapter03/: CMakeLists.txt
Examples/Chapter03/AbsFunctorDemo/: AbsFunctorDemo.cpp  CMakeLists.txt
Examples/Chapter03/AccumulateDemo/: AccumulateDemo.cpp  CMakeLists.txt
Examples/Chapter03/AutoParameters/: CMakeLists.txt  auto_parameters.cpp
Examples/Chapter03/ConceptsDemo/: CMakeLists.txt  ConceptsDemo.cpp
Examples/Chapter03/DecltypeThisDemo/: CMakeLists.txt  DecltypeThisDemo.cpp
Examples/Chapter03/Derivative/: CMakeLists.txt  Derivative.cpp
Examples/Chapter03/GrowingTest/: CMakeLists.txt  GrowingTest.cpp
Examples/Chapter03/LambdaDemo/: CMakeLists.txt  LambdaDemo.cpp
Examples/Chapter03/NamespaceLookupDemo/: CMakeLists.txt  namespace_lookup_demo.cpp
Examples/Chapter03/NamespacesDemo/: CMakeLists.txt  nested_namespaces.cpp
Examples/Chapter03/StructuredBindingsDemo/: CMakeLists.txt  StructuredBindingsDemo.cpp
Examples/Chapter03/StructuredBindingsUserDemo/: CMakeLists.txt  StructuredBindingsUserDemo.cpp
Examples/Chapter03/TemplateTypeDeduction/: CMakeLists.txt  template_type_deduction.cpp
Examples/Chapter03/VariadicTemplatesDemo/: CMakeLists.txt  VariadicTemplatesDemo.cpp
Examples/Chapter03/VectorConstraintInitialization/: CMakeLists.txt  VectorConstraintInitialization.cpp
Examples/Chapter03/VectorFormatOutputDemo/: CMakeLists.txt  VectorFormatOutputDemo.cpp
Examples/Chapter03/VectorTemplate/: CMakeLists.txt  VectorTemplate.cpp
Lib/: CMakeLists.txt
Solutions/: CMakeLists.txt
Solutions/Chapter01/: CMakeLists.txt
Solutions/Chapter01/Exercise_1/: CMakeLists.txt
Solutions/Chapter01/Exercise_3/: CMakeLists.txt  areas_and_volumes.cpp
Solutions/Chapter01/Exercise_4/: CMakeLists.txt  print_middle.cpp
Solutions/Chapter01/Exercise_5/: CMakeLists.txt  calculate_root.cpp
Solutions/Chapter01/Exercise_6/: CMakeLists.txt  areas_and_volumes_file_io.cpp
Solutions/Chapter01/Exercise_8/: CMakeLists.txt  convert_units.cpp
src/: CMakeLists.txt
src/Chapter1/: CMakeLists.txt
src/Chapter1/Examples/: CMakeLists.txt
src/Chapter1/Examples/Section1/: CMakeLists.txt
src/Chapter1/Examples/Section1/Example1/: CMakeLists.txt
src/Chapter1/Examples/Section2/: CMakeLists.txt
src/Chapter1/Examples/Section4/: CMakeLists.txt
src/Chapter1/Examples/Section5/: CMakeLists.txt  overloading_demo.cpp
src/Chapter1/Examples/Section6/: CMakeLists.txt  assert_demo.cpp
src/Chapter1/Examples/Section7/: CMakeLists.txt  file_io_demo.cpp  new_formatting_demo.cpp
src/Chapter1/Examples/Section7/toy_file_io/: CMakeLists.txt  toy_file_io.cpp  toy_file_io.h
(+58 files in other folders)
