cmake_minimum_required(VERSION 3.20.0)

add_subdirectory(TemplateTypeDeduction)
add_subdirectory(AutoParameters)
add_subdirectory(NamespacesDemo)
add_subdirectory(NamespaceLookupDemo)
add_subdirectory(VectorTemplate)
add_subdirectory(AccumulateDemo)
add_subdirectory(StructuredBindingsDemo)
add_subdirectory(StructuredBindingsUserDemo)
add_subdirectory(AbsFunctorDemo)
add_subdirectory(Derivative)
add_subdirectory(LambdaDemo)
add_subdirectory(ConceptsDemo)
add_subdirectory(VectorConstraintInitialization)