cmake_minimum_required(VERSION 3.20.0)
if(NOT WITH_PRINT_FUNCTION_MESSAGES)
add_subdirectory(Exercise_1)
add_subdirectory(Exercise_2)
add_subdirectory(Exercise_3)
add_subdirectory(Exercise_4)
add_subdirectory(Exercise_5)
add_subdirectory(Exercise_6)
add_subdirectory(Exercise_8)
else()
    message("WITH PRINT_FUNCTION MESSAGES IS DEFINED")
endif()